Went and fixed a bunch of code warnings